Refactor serialization to support multiple media types and add multipart handling